@@ -17,7 +17,7 @@
 
 package edu.uci.ics.crawler4j.examples.multiple;
 
-import java.util.List;
+import java.util.Set;
 import java.util.regex.Pattern;
 
 import edu.uci.ics.crawler4j.crawler.Page;
@@ -70,7 +70,7 @@ public class BasicCrawler extends WebCrawler {
       HtmlParseData htmlParseData = (HtmlParseData) page.getParseData();
       String text = htmlParseData.getText();
       String html = htmlParseData.getHtml();
-      List<WebURL> links = htmlParseData.getOutgoingUrls();
+      Set<WebURL> links = htmlParseData.getOutgoingUrls();
 
       System.out.println("Text length: " + text.length());
       System.out.println("Html length: " + html.length());
